created empty JSON model for testing.  Added to manifest

--- a/webapp/view/Project.view.xml
+++ b/webapp/view/Project.view.xml
@@ -6,10 +6,16 @@
 >
     <Page
         id="page"
-        title="Shart"
+        title="Shartrell"
     >
-        <content />
+        <content>
+            <Panel
+                id="mainPanel"
+                class="sapUiResponsiveMargin sapUiResponsiveContentPadding"
+                width="auto"
+            >
+                <content />
+            </Panel>
+        </content>
     </Page>
 </mvc:View>
-
-
