--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,8 +1,11 @@
-<mvc:View controllerName="hipt.hipt.controller.App"
+<mvc:View
+    controllerName="hipt.hipt.controller.App"
     xmlns:html="http://www.w3.org/1999/xhtml"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <App id="app">
-
-    </App>
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
+    xmlns="sap.m"
+>
+    <Shell id="appShell">
+        <App id="app" />
+    </Shell>
 </mvc:View>
