removed empty header from Project.view.xml

--- a/webapp/view/WorkCard.view.xml
+++ b/webapp/view/WorkCard.view.xml
@@ -5,7 +5,8 @@
     displayBlock="true"
     xmlns="sap.m"
 >
-    <Panel id="BasicPanel"></Panel>
+    <Panel id="BasicPanel">
+    </Panel>
 </mvc:View>
 
 
