Changed some names

--- a/webapp/view/Project.view.xml
+++ b/webapp/view/Project.view.xml
@@ -1,15 +1,9 @@
 <mvc:View
-    controllerName="hipt.hipt.controller.Project"
+    xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:mvc="sap.ui.core.mvc"
-    displayBlock="true"
     xmlns="sap.m"
+    controllerName="hipt.hipt.controller.Project"
+    displayBlock="true"
 >
-    <Page
-        id="page"
-        title="Shartrell"
-    >
-        <content>
-
-        </content>
-    </Page>
+    <Shell id="Project" />
 </mvc:View>
