--- a/webapp/view/SubtaskCard.view.xml
+++ b/webapp/view/SubtaskCard.view.xml
@@ -5,7 +5,7 @@
     displayBlock="true"
     xmlns="sap.m"
 >
-    <Panel id="BasicPanel">
+    <Panel id="SubtaskCard">
     </Panel>
 </mvc:View>
 
