changed some names, added some placeholders

--- a/webapp/view/ProjectOverview.view.xml
+++ b/webapp/view/ProjectOverview.view.xml
@@ -5,5 +5,7 @@
     controllerName="hipt.hipt.controller.Project"
     displayBlock="true"
 >
-    <Shell id="Project" />
+    <Shell id="ProjectOverview">
+        <Button id="thisBtn" />
+    </Shell>
 </mvc:View>
