--- a/webapp/view/ProjectOverview.view.xml
+++ b/webapp/view/ProjectOverview.view.xml
@@ -5,7 +5,12 @@
     controllerName="hipt.hipt.controller.ProjectOverview"
     displayBlock="true"
 >
-    <Page id="ProjOverviewPage" > 
-    <content></content>
+    <Page id="ProjOverviewPage">
+        <content>
+            <mvc:XMLView
+                id="StepDetails"
+                viewName="hipt.hipt.view.StepDetails"
+            />
+        </content>
     </Page>
 </mvc:View>
