Cleaned up the loop to check levels and create substep arr

--- a/webapp/view/StepDetails.view.xml
+++ b/webapp/view/StepDetails.view.xml
@@ -19,6 +19,8 @@
                 <ObjectListItem
                     id="taskListItem2"
                     title="{ActiveScope>1/stepStr}"
+                    press=".onStepClick"
+                    type="Navigation"
                 />
             </List>
         </content>
