--- a/webapp/view/StepPage.view.xml
+++ b/webapp/view/StepPage.view.xml
@@ -2,10 +2,9 @@
     xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
-    controllerName="hipt.hipt.controller.ProjectOverview"
     displayBlock="true"
 >
-    <Page id="ProjOverviewPage">
+    <Page id="StepPage">
         <content>
             <mvc:XMLView
                 id="StepDetails"
