--- a/webapp/view/StepDetails.view.xml
+++ b/webapp/view/StepDetails.view.xml
@@ -22,7 +22,7 @@
                         <ObjectListItem
                             id="taskListItem2"
                             title="{ActiveScope>1/stepStr}"
-                            press="onStepClick"
+                            press=".onStepClick"
                             type="Navigation"
                         />
                     </List>
